# rgf

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AWESOME_RGF.md  FastRGF.rst  LICENSE  MANIFEST.in  README.md  Readme.md  Readme.rst  codecov.yml  model.py  rgf.py  setup.cfg  setup.py
.ci/: python_tests.sh  python_tests_windows.ps1  r_tests.sh  r_tests_windows.ps1
.github/: ISSUE_TEMPLATE.MD
.github/workflows/: main.yml
FastRGF/: CHANGES.md  CMakeLists.txt  LICENSE  README.md
FastRGF/examples/: README.md
FastRGF/examples/binary_classification/: README.md  run.sh
FastRGF/examples/regression/: README.md  run.sh
FastRGF/examples/regression/inputs/: config
FastRGF/include/: discretization.h  dtree.h  header.h
FastRGF/src/base/: CMakeLists.txt
FastRGF/src/exe/: CMakeLists.txt
R-package/: .R.appveyor.ps1  .R.travis.sh  .Rbuildignore  .codecov.yml  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.md
R-package/R/: FastRGF_Classifier.R  FastRGF_Regressor.R  Internal_class.R  RGF_Classifier.R  RGF_Regressor.R  RGF_cleanup_temp_files.R  TO_scipy_sparse.R  mat_2scipy_sparse.R  package.R  utils.R  zzz.R
R-package/RGF/: .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
R-package/RGF/R/: package.R  utils.R  zzz.R
R-package/RGF/man/: FastRGF_Classifier.Rd  FastRGF_Regressor.Rd  RGF_Classifier.Rd  RGF_Regressor.Rd  RGF_cleanup_temp_files.Rd
R-package/RGF/tests/: testthat.R
R-package/RGF/tests/testthat/: test_package.R
R-package/RGF/vignettes/: the_RGF_package.Rmd
R-package/inst/: CITATION
R-package/man/: FastRGF_Classifier.Rd  FastRGF_Regressor.Rd  Internal_class.Rd  RGF_Classifier.Rd  RGF_Regressor.Rd  RGF_cleanup_temp_files.Rd  TO_scipy_sparse.Rd  mat_2scipy_sparse.Rd
R-package/tests/testthat/: helper-init.R  helper-skip.R  setup.R  teardown.R  test-RGF_package.R  test_package.R
R-package/vignettes/: the_RGF_package.Rmd
RGF/: CHANGES.md  CMakeLists.txt  COPYING  README.md  rgf-guide.rst
RGF/Windows/rgf/: rgf.vcxproj
RGF/examples/: call_exe.pl
RGF/examples/sample/: predict.inp  regress_train_test.inp  train.inp  train_predict.inp  train_test.inp
RGF/src/com/: AzParam.hpp  AzReadOnlyMatrix.hpp  AzStrArray.hpp  AzStrPool.hpp
RGF/src/tet/: AzOptOnTree.cpp  AzOptOnTree.hpp  AzOptOnTree_TreeReg.hpp  AzRegDepth.hpp  AzReg_TsrOpt.cpp  AzReg_TsrOpt.hpp  AzReg_TsrSib.cpp  AzRgfTrainerSel.hpp  AzSortedFeat.hpp  AzTETproc.hpp  AzTrTreeEnsemble.hpp  AzTrTreeFeat.hpp  AzTrTtarget.hpp  AzTreeRule.hpp
docker/: Dockerfile
example/: cross_validation_for_iris.py
examples/: FastRGF_classifier_on_iris_dataset.py  FastRGF_regressor_on_boston_dataset.py  FastRGF_regressors_on_boston_dataset.py  FastRGF_regressors_on_iris_dataset.py  classification_on_iris_dataset.ipynb  comparison_RGF_and_GBM_classifiers_on_iris_dataset.py  comparison_RGF_and_RF_regressors_on_boston_dataset.py  cross_validation_for_iris_dataset.py  regression_on_boston_dataset.ipynb
examples/RGF/: comparison_RGF_and_GBM_classifiers_on_iris_dataset.py  comparison_RGF_and_RF_regressors_on_boston_dataset.py
examples/fast_rgf/: FastRGF_classifier_on_iris_dataset.py  FastRGF_regressor_on_boston_dataset.py
include/rgf/: CMakeLists.txt  COPYING  README  README.md
include/rgf/Windows/rgf/: rgf.sln  rgf.vcxproj
include/rgf/src/com/: AzBmat.hpp  AzDmat.cpp  AzDmat.hpp  AzIntPool.cpp  AzIntPool.hpp  AzLoss.cpp  AzLoss.hpp  AzMemTempl.hpp  AzOut.hpp  AzParam.cpp  AzPerfResult.hpp  AzPrint.hpp  AzSmat.cpp  AzSmat.hpp  AzStrPool.cpp  AzSvDataS.cpp  AzSvDataS.hpp  AzSvFeatInfoClone.hpp  AzTaskTools.cpp  AzTaskTools.hpp  AzTimer.hpp  AzTools.cpp  AzUtil.cpp
include/rgf/src/tet/: AzDataForTrTree.hpp  AzFindSplit.cpp  AzFindSplit.hpp  AzFsinfo.hpp  AzOptOnTree.cpp  AzOptOnTree.hpp  AzOptOnTree_TreeReg.cpp  AzOptimizerT.hpp  AzReg_TreeRegArr.hpp  AzReg_TsrSib.hpp  AzReg_Tsrbase.cpp  AzRgfTree.cpp  AzRgfTree.hpp  AzRgfTreeEnsemble.hpp  AzRgf_FindSplit.hpp  AzRgf_FindSplit_Dflt.cpp  AzRgf_FindSplit_Dflt.hpp  AzRgf_FindSplit_TreeReg.cpp  AzRgf_FindSplit_TreeReg.hpp  AzRgf_Optimizer.hpp  AzRgf_Optimizer_Dflt.cpp  AzRgf_Optimizer_Dflt.hpp  AzRgforest.cpp  AzRgforest.hpp  AzRgforest_TreeReg.hpp  AzSortedFeat.cpp  AzTET_Eval.hpp  AzTET_Eval_Dflt.hpp  AzTETmain.cpp  AzTETmain.hpp  AzTETmain_kw.hpp  AzTETproc.cpp  AzTETrainer.hpp  AzTETselector.hpp  AzTE_ModelInfo.hpp  AzTrTree.cpp  AzTrTree.hpp  AzTrTreeEnsemble.hpp  AzTrTreeEnsemble_ReadOnly.hpp  AzTrTreeFeat.cpp  (+10 more)
lib/: test.py
python-package/: MANIFEST.in  Readme.rst  setup.py
python-package/docker/: Dockerfile
python-package/examples/FastRGF/: FastRGF_regressor_on_boston_dataset.py
python-package/examples/RGF/: classification_on_iris_dataset.ipynb  comparison_RGF_and_GBM_classifiers_on_iris_dataset.py  comparison_RGF_and_RF_regressors_on_boston_dataset.py  comparison_RGF_and_RF_regressors_on_diabetes_dataset.py  regression_on_boston_dataset.ipynb  regression_on_diabetes_dataset.ipynb
python-package/include/fast_rgf/: README.md
python-package/include/fast_rgf/src/forest/: CMakeLists.txt
python-package/include/rgf/: README.md
python-package/include/rgf/src/com/: AzException.hpp  AzHelp.hpp  AzSvFeatInfo.hpp  AzTools.hpp  AzUtil.hpp
python-package/include/rgf/src/tet/: AzReg_TreeReg.hpp  AzReg_TreeRegArrImp.hpp  AzReg_Tsrbase.cpp  AzReg_Tsrbase.hpp  AzRgfTreeEnsImp.hpp  AzRgf_FindSplit_Dflt.cpp  AzRgf_Optimizer_TreeReg.hpp  AzRgf_kw.hpp  AzRgforest.hpp  AzTrTsplit.hpp  AzTreeEnsemble.hpp
python-package/rgf/: __init__.py  fastrgf_model.py  rgf_model.py  sklearn.py  utils.py
python-package/tests/: test_examples.py  test_rgf_python.py
rgf/: __init__.py  fastrgf_model.py  rgf.py  rgf_model.py  sklearn.py  test.py  util.py  utils.py
rgf/test/: test.py
test/: test.py
tests/: test.py  test_examples.py  test_rgf_python.py
